--- a/AllDemoInOne/bin/AndroidManifest.xml
+++ b/AllDemoInOne/bin/AndroidManifest.xml
@@ -16,24 +16,45 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name="MainActivity">
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/applicationId" />
+
+        <activity android:name="MainActivity" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".simpleparsing.ParsingActivity"></activity>
-        <activity android:name="com.hdik.main.tabfragment.main.FragmentTabHostActivity"></activity>
-        <activity android:name=".fragmentapp.MainFragmentActivity"></activity>
-        <activity android:name=".listviewfilter.ListViewFilterActivity"></activity>
-        <activity android:name=".twitterdemo.TwitterDemoActivity"></activity>
-        <activity android:name=".twitterdemo.TwitterLogin"></activity>
-        <activity android:name=".listviewmultichoice.ListViewMultiChoice"></activity>
-        <activity android:name=".db.EmployeeMainActivity"></activity>
-        <activity android:name=".db.InsertEmployeeActivity"></activity>
-        <activity android:name=".db.ViewEmployeeActivity"></activity>
-        <activity android:name=".db.UpdateEmployeeActivity"></activity>
-  
-      </application>
-       
+        <activity android:name=".simpleparsing.ParsingActivity" >
+        </activity>
+        <activity android:name="com.hdik.main.tabfragment.main.FragmentTabHostActivity" >
+        </activity>
+        <activity android:name=".fragmentapp.MainFragmentActivity" >
+        </activity>
+        <activity android:name=".listviewfilter.ListViewFilterActivity" >
+        </activity>
+        <activity android:name=".twitterdemo.TwitterDemoActivity" >
+        </activity>
+        <activity android:name=".twitterdemo.TwitterLogin" >
+        </activity>
+        <activity android:name=".listviewmultichoice.ListViewMultiChoice" >
+        </activity>
+        <activity android:name=".db.EmployeeMainActivity" >
+        </activity>
+        <activity android:name=".db.InsertEmployeeActivity" >
+        </activity>
+        <activity android:name=".db.ViewEmployeeActivity" >
+        </activity>
+        <activity android:name=".db.UpdateEmployeeActivity" >
+        </activity>
+        <activity android:name=".fbdemo.FBLogin" >
+        </activity>
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
+    </application>
+
 </manifest>
