--- a/AllDemoInOne/.classpath
+++ b/AllDemoInOne/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="lib" path="libs/android-query-full.0.25.9.jar"/>
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="lib" path="libs/twitter4j-core-3.0.3.jar"/>
+	<classpathentry kind="lib" path="libs/zbar.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
